--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
-          npm install express
-          npm init -y
+          npm install
           npm run build
       - uses: actions/upload-artifact@master
         with:
