--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           npm install
           npm run build
+          npm audit fix
+          
       - uses: actions/upload-artifact@master
         with:
           name: webpack artifacts
