--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: npm install and build webpack
         run: |
           npm install
-          npm run build:production
+          npm run build
           
       - uses: actions/upload-artifact@master
         with:
